--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+<link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
+
+<link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.woff2" as="font" type="font/woff2" crossorigin>
+
+
   <style>
 html, body {
 margin: 0;
