--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
+<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
+
 
 
   <style>
