--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
+<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
+
   <style>
 html, body {
   margin: 0;
