--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Dec 19 2025 22:34:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Dec 22 2025 23:00:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="693ae7ff5b346f45f8241fb0" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -12,9 +12,12 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
-<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
-
+  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
   <style>
 html, body {
   margin: 0;
@@ -186,7 +189,7 @@ html, body {
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-center-container shadow-three w-nav">
         <div class="container">
           <div class="navbar-wrapper-three">
-            <a href="index.html" class="navbar-brand-three w-nav-brand"><img src="images/DAFT-Logo.svg" loading="lazy" alt="" class="daft-nav-logo"></a>
+            <a href="index.html" class="navbar-brand-three w-nav-brand"><img src="images/DAFT-Logo.svg" loading="eager" alt="" class="daft-nav-logo"></a>
             <nav role="navigation" class="nav-menu-wrapper-three w-nav-menu">
               <div class="nav-menu-three">
                 <ul role="list" class="nav-menu-block w-list-unstyled">
