--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Dec 19 2025 22:34:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Dec 22 2025 23:00:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="693bf919ec57d63308aa3105" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -12,9 +12,12 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
-<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
-
+  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
   <style>
 html, body {
   margin: 0;
@@ -25,115 +28,17 @@ html, body {
 body {
   position: relative;
 }
-.sun {
-  position: absolute;
-  top: 15%;                  /* fix vertical position in viewport */
-  transform: translateY(-10%); /* center vertically */
-   right: 0;                  /* adjust as needed */
+.daft-nav-logo-white {
+  opacity: 1;
+  visibility: visible;
 }
-@media screen and (max-width: 768px) and (orientation: portrait) {
-  .sun {
-    position: absolute;
-    top: 15%;                 /* fix vertical position in viewport */
-    transform: translateY(-10%);
-    right: 10%;                /* move 5% in from the right edge */
-  }
-}
-.hero-wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-.hero-text-1 {
+.daft-nav-logo-works {
   opacity: 0;
-  margin: 0;
-  font-weight: 700;
-  user-select: none;
-  color: black;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-  display: flex;
-  gap: 0.1em;
+  visibility: hidden;
 }
-.hero-text-1 span {
-  display: inline-block;
-  transform-origin: center bottom;
-  will-change: transform, color, opacity;
-  color: black;
-  transition: none !important;
-  filter: contrast(1.015) brightness(0.995) blur(0.08px);
-}
-.full-page-about {
-  height: 101vh;
-  overflow: hidden;
-  position: relative;  /* if needed */
-}
-.video,
-.animation,
-.graphic-design,
-.web-design {
-  opacity: 0;
-  position: relative;
-  overflow: visible;
-  filter: contrast(1.01) brightness(0.997) blur(0.06px);
-  width: 15vw;
-  height: 15vw;
-  min-width: 65px;
-  min-height: 65px;
-  max-width: 300px;
-  max-height: 300px;
-  aspect-ratio: 1 / 1;
-  flex-shrink: 0;
-}
-.services-video-text,
-.services-animation-text,
-.services-graphicdesign-text,
-.services-web-text {
-  opacity: 0;
-}
-.video::before,
-.animation::before,
-.graphic-design::before,
-.web-design::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  pointer-events: none;
-  z-index: 1;
-  background-image: 
-    repeating-linear-gradient(0deg, transparent 0%, rgba(255,255,255,0.008) 50%, transparent 100%),
-    repeating-linear-gradient(90deg, transparent 0%, rgba(0,0,0,0.008) 50%, transparent 100%);
-  background-size: 2px 2px, 2px 2px;
-  background-position: 0 0, 1px 1px;
-  mix-blend-mode: overlay;
-  opacity: 0.5;
-}
-@media (max-width: 478px) {
-  .hero-text-1 {
-    font-size: 2.5rem;
-  }
-}
-@media (prefers-reduced-motion: reduce) {
-  .hero-text-1 { transition: none !important; opacity: 1 !important; }
-  .hero-text-1 span,
-  .video, .animation, .graphic-design, .web-design {
-    filter: none !important;
-  }
-  .video::before, .animation::before, .graphic-design::before, .web-design::before {
-    display: none !important;
-  }
+.daft-nav-logo-white,
+.daft-nav-logo-works {
+  will-change: opacity;
 }
 </style>
   <style>
@@ -191,7 +96,7 @@ body {
       <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-logo-center-container shadow-three w-nav">
         <div class="container">
           <div class="navbar-wrapper-three">
-            <a href="index.html" class="navbar-brand-three w-nav-brand"><img src="images/DAFT-Logo.svg" loading="lazy" alt="" class="daft-nav-logo-works"><img src="images/DAFT-website-logo-contact.svg" loading="lazy" alt="" class="daft-nav-logo-white"></a>
+            <a href="index.html" class="navbar-brand-three w-nav-brand"><img src="images/DAFT-Logo.svg" loading="lazy" alt="" class="daft-nav-logo-works"><img src="images/DAFT-website-logo-contact.svg" loading="eager" alt="" class="daft-nav-logo-white"></a>
             <nav role="navigation" class="nav-menu-wrapper-three w-nav-menu">
               <div class="nav-menu-three">
                 <ul role="list" class="nav-menu-block w-list-unstyled">
@@ -626,7 +531,7 @@ ScrollTrigger.create({
     const whiteLogo  = document.querySelector(".daft-nav-logo-white");
     const worksLogo  = document.querySelector(".daft-nav-logo-works");
     if (!whiteLogo || !worksLogo) return;
-    if (progress >= 0.93) {
+    if (progress >= 0.95) {
       // after 75%: show works, hide white
       if (whiteLogo.style.display !== "none") {
         whiteLogo.style.display = "none";
