--- a/index.html
+++ b/index.html
@@ -13,22 +13,12 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-
-  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
-<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
-  <!-- Preload Maison Neue Fonts -->
-<link rel="preload" href="/fonts/MaisonNeue-Thin.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/MaisonNeue-Light.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/MaisonNeue-Regular.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/MaisonNeue-Demi.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/MaisonNeue-Bold.woff2" as="font" type="font/woff2" crossorigin>
-
-<!-- Preload Maison Neue Mono Fonts -->
-<link rel="preload" href="/fonts/MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin>
-<link rel="preload" href="/fonts/MaisonNeueMono-Demi.otf" as="font" type="font/otf" crossorigin>
-<link rel="preload" href="/fonts/MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin>
-
-
+  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
   <style>
 html, body {
 margin: 0;
