--- a/index.html
+++ b/index.html
@@ -15,6 +15,56 @@
 <meta property="og:image" content="https://daft.media/images/DAFT-website-logo-contact.svg" />
 <meta property="og:site_name" content="DAFT" />
 <meta property="og:locale" content="en_GB" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "DAFT",
+  "url": "https://daft.media",
+  "logo": "https://daft.media/images/DAFT-website-logo-contact.svg",
+  "description": "DAFT provides multimedia design, video production, motion graphics, graphic design, web design, branding, and subscription-based creative services. Flexible, on-demand creative support for businesses of any size.",
+  "sameAs": [],
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "email": "sam@daft.media",
+    "contactType": "customer support",
+    "url": "https://daft.media/contact"
+  },
+  "department": [
+    {
+      "@type": "Organization",
+      "name": "Video Production",
+      "description": "Professional video production services for businesses, including filming, editing, and post-production."
+    },
+    {
+      "@type": "Organization",
+      "name": "Motion Graphics",
+      "description": "Custom motion graphics and animation services for marketing, social media, and digital campaigns."
+    },
+    {
+      "@type": "Organization",
+      "name": "Graphic Design",
+      "description": "Creative graphic design services including branding, logo design, and marketing materials."
+    },
+    {
+      "@type": "Organization",
+      "name": "Web Design",
+      "description": "Website design and development services, including full site builds and ongoing maintenance."
+    },
+    {
+      "@type": "Organization",
+      "name": "Branding",
+      "description": "Comprehensive branding services for startups and established businesses, including rebranding and visual identity."
+    },
+    {
+      "@type": "Organization",
+      "name": "Subscription Services",
+      "description": "Flexible creative subscription services allowing businesses to access ongoing design and media support without hiring in-house."
+    }
+  ]
+}
+</script>
+
 
   <link rel="canonical" href="https://daft.media/">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
