--- a/template.html
+++ b/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Dec 19 2025 22:34:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 02 2026 16:59:13 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68ed5cb037d8478792ca408f" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -8,10 +8,16 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/gfm-2-f2a3438d197298fcf6c9468c8ec6bd09.webflow.css" rel="stylesheet" type="text/css">
-  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="bfd91ec1-014d-1986-fd65-2709268072b8"] {height:0px;}}@media (max-width:767px) and (min-width:480px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="bfd91ec1-014d-1986-fd65-2709268072b8"] {height:0px;}}@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="bfd91ec1-014d-1986-fd65-2709268072b8"] {height:0px;}}</style>
+  <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}}@media (max-width:991px) and (min-width:768px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="bfd91ec1-014d-1986-fd65-2709268072b8"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}}@media (max-width:767px) and (min-width:480px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="bfd91ec1-014d-1986-fd65-2709268072b8"] {height:0px;}}@media (max-width:479px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="33616df9-e1f8-7a19-3545-ceed4deec67f"] {height:0px;}html.w-mod-js:not(.w-mod-ix) [data-w-id="bfd91ec1-014d-1986-fd65-2709268072b8"] {height:0px;}}</style>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
   <style>
 html, body {
   height: 100%;
