--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 CONTACT.HTML START:
 
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Dec 22 2025 23:00:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="693ae7ff5b346f45f8241fb0" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
