--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   "sameAs": [],
   "contactPoint": {
     "@type": "ContactPoint",
-    "email": "sam@daft.media",
+    "email": "info@daft.media",
     "contactType": "customer support",
     "url": "https://daft.media/contact"
   },
