--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </script>
 
 
-  <link rel="canonical" href="https://daft.media/">
+
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/gfm-2-f2a3438d197298fcf6c9468c8ec6bd09.webflow.css" rel="stylesheet" type="text/css">
@@ -75,12 +75,16 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://daft.media" rel="canonical">
-  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
+ <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492799-MaisonNeueExt-Normal.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
+
+  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
+<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
   <canvas id="noise" class="noise"></canvas>
   <script>
 // Polyfill for Object.hasOwn() - Safari 15.3 and below
