Update and rename index copy.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<<<<<<< HEAD
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 02 2026 18:26:17 GMT+0000 (Coordinated Universal Time)  -->
-=======
+INDEX.HTML START:
+
 <!DOCTYPE html>
->>>>>>> 28754cc5245d8210343273bf469599bf775653df
 <html data-wf-page="68c975cb862aeb40410727b4" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
