--- a/contact.html
+++ b/contact.html
@@ -411,6 +411,7 @@ html, body {
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+   <script src="https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
   <!--  Polyfill for Safari 15.3 and below  -->
   <script>
