--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,9 @@
 <html data-wf-page="693ae7ff5b346f45f8241fb0" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Contact</title>
-  <meta content="Get in touch with DAFT to discuss your creative needs. Flexible multimedia design support for your business." name="description">
+  <title>DAFT - Contact | Multimedia Design, Video Production, Motion Graphics, Graphic Design, Web Design & Branding</title>
+<meta name="description" content="Get in touch with DAFT to discuss your creative needs. Flexible multimedia design support for your business.">
+<meta name="keywords" content="multimedia design, video production, motion graphics, graphic design, web design, branding, contact, creative services, DAFT">
   <meta content="Contact" property="og:title">
   <meta content="Get in touch with DAFT to discuss your creative needs. Flexible multimedia design support for your business." property="og:description">
   <meta content="Contact" property="twitter:title">
@@ -20,12 +21,16 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://daft.media/contact" rel="canonical">
-  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
-  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+   <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
   <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
+ <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492799-MaisonNeueExt-Normal.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
+
+  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
+<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
   <canvas id="noise" class="noise"></canvas>
   <style>
 html, body {
