--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jan 03 2026 20:35:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="693ae7ff5b346f45f8241fb0" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
