--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Jan 03 2026 23:51:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="693bf919ec57d63308aa3105" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DAFT - How It Works | Subscription Multimedia Design, Video Production, Motion Graphics, Graphic Design, Web Design &amp Branding</title>
-<meta name="description" content="Discover how DAFT's flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs.">
-<meta name="keywords" content="DAFT subscription service, multimedia design, video production, motion graphics, graphic design, web design, branding, creative support, how it works">
-
+  <title>How it Works</title>
+  <meta content="Discover how DAFT&#x27;s flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs." name="description">
   <meta content="How it Works" property="og:title">
   <meta content="Discover how DAFT&#x27;s flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs." property="og:description">
   <meta content="How it Works" property="twitter:title">
@@ -22,14 +20,12 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://daft.media/how-it-works" rel="canonical">
-    
- <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492799-MaisonNeueExt-Normal.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
-<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
+  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
   <canvas id="noise" class="noise"></canvas>
   <script>
 // Polyfill for Object.hasOwn() - Safari 15.3 and below
@@ -128,7 +124,7 @@ body {
                   </li>
                   <li class="list-item-3">
                     <a href="#" class="nav-link-2">HOW IT WORKS</a>
-                    <a href="#" class="how-nav underline w-inline-block">
+                    <a href="how-it-works.html" aria-current="page" class="how-nav underline w-inline-block w--current">
                       <div class="nav-text-1">HOW IT WORKS</div>
                       <div class="custom-styles w-embed">
                         <style>
@@ -229,7 +225,7 @@ body {
       </div>
       <div class="w-layout-blockcontainer contact-line black w-container"></div>
       <div class="div-block-42">
-        <div class="site-text-block">You subscribe to a flexible creative partnership that fits the level of support you actually need. No long contracts. No hiring headaches. Just dependable creative output when it matters.<br><br>The cost is based on the volume and complexity of work you need each month. A few design requests here and there costs less than full scale brand, video, and web support. Simple as that. As your needs grow or slow down, your subscription can scale with you.<br><br>Once you are on board, you send requests as they come in. Graphic design, video, animation, web updates or rebrands. We slot them in and get to work. You get clear timelines and fast turnaround.<br><br>No chasing freelancers. No briefing multiple people. No explaining your brand over and over again.<br><br>Kick back and leave it with us. You focus on running the business. We handle the creative.</div>
+        <div class="site-text-block">You subscribe to a flexible creative partnership that fits the level of support you actually need. No long contracts. No hiring headaches. Just dependable creative output when it matters.<br><br>The cost is based on the volume and complexity of work you require each month. A few design requests here and there costs less than full scale brand, video, and web support. Simple as that. As your needs grow or slow down, your subscription can scale with you.<br><br>Once you are on board, you send requests as they come in. Graphic design, video, animation, web updates or rebrands. We slot them in and get to work. You get clear timelines and fast turnaround.<br><br>No chasing freelancers. No briefing multiple people. No explaining your brand over and over again.<br><br>Kick back and leave it with us. You focus on running the business. We handle the creative.</div>
       </div>
     </section>
     <section class="section-5">
@@ -245,7 +241,7 @@ body {
                     <div class="text-block-14">
                       <div class="label red">01</div>
                       <div class="content">
-                        <div class="steps-heading">Choose your subscription</div>
+                        <div class="steps-heading">Choose your colour</div>
                         <p class="steps-text">Pick the plan that matches the level of creative support you need.</p>
                       </div>
                     </div>
@@ -291,8 +287,8 @@ body {
                     <div class="text-block-14">
                       <div class="label yellow">03</div>
                       <div class="content">
-                        <div class="steps-heading">Fast reliable delivery</div>
-                        <p class="steps-text">We turn your requests around quickly and keep everything moving without delays.<br></p>
+                        <div class="steps-heading">Reliable delivery</div>
+                        <p class="steps-text"><strong>We turn your requests around quickly and keep everything moving without delays.</strong><br></p>
                       </div>
                     </div>
                   </div>
