--- a/how-it-works.html
+++ b/how-it-works.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Jan 04 2026 00:34:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="693bf919ec57d63308aa3105" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DAFT - How It Works | Subscription Multimedia Design, Video Production, Motion Graphics, Graphic Design, Web Design & Branding</title>
-<meta name="description" content="Discover how DAFT's flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs.">
-<meta name="keywords" content="DAFT subscription service, multimedia design, video production, motion graphics, graphic design, web design, branding, creative support, how it works">
-
+  <title>How it Works</title>
+  <meta content="Discover how DAFT&#x27;s flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs." name="description">
   <meta content="How it Works" property="og:title">
   <meta content="Discover how DAFT&#x27;s flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs." property="og:description">
   <meta content="How it Works" property="twitter:title">
@@ -22,13 +20,12 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://daft.media/how-it-works" rel="canonical">
-  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492799-MaisonNeueExt-Normal.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
-
-  <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
-<link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
+  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492811-MaisonNeueMono-Regular.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492812-MaisonNeueMono-Italic.otf" as="font" type="font/otf" crossorigin="">
+  <link rel="preload" href="/fonts/9492813-MaisonNeueMono-Bold.otf" as="font" type="font/otf" crossorigin="">
   <canvas id="noise" class="noise"></canvas>
   <script>
 // Polyfill for Object.hasOwn() - Safari 15.3 and below
@@ -398,10 +395,11 @@ const noise = () => {
     const buffer32 = new Uint32Array(idata.data.buffer);
     const len = buffer32.length;
     for (let i = 0; i < len; i++) {
-      if (Math.random() < 1) {
+      if (Math.random() < 1) {  
         const color = grainColors[Math.floor(Math.random() * grainColors.length)];
         buffer32[i] = color;
       }
+      // Rest stays transparent
     }
     noiseData.push(idata);
   };
@@ -411,6 +409,7 @@ const noise = () => {
   };
   const loop = () => {
     paintNoise();
+    // Slower frame rate: ~12 FPS instead of 25 FPS → grain moves more slowly
     loopTimeout = setTimeout(() => {
       requestAnimationFrame(loop);
     }, 1000 / 12);
@@ -421,7 +420,8 @@ const noise = () => {
     canvas.width = wWidth;
     canvas.height = wHeight;
     noiseData = [];
-    for (let i = 0; i < 100; i++) createNoise();
+    // More frames = each pattern stays on screen longer before changing
+    for (let i = 0; i < 100; i++) createNoise();  // 30 frames instead of 10
     frame = 0;
     loop();
   };
@@ -435,9 +435,19 @@ const noise = () => {
   });
   canvas = document.getElementById("noise");
   ctx = canvas.getContext("2d");
+  // Start hidden
+  canvas.style.opacity = '0';
   setup();
+  // Fade in after delay to normal 0.06 opacity
+  setTimeout(() => {
+    canvas.style.transition = 'opacity 2s ease-in';
+    canvas.style.opacity = '0.06';
+  }, 1500);
 };
-noise();
+// Delay noise initialization to let video load first
+setTimeout(() => {
+  noise();
+}, 800);
 </script>
   <!--  Polyfill for Safari 15.3 and below  -->
   <script>
