--- a/how-it-works.html
+++ b/how-it-works.html
@@ -2,7 +2,7 @@
 <html data-wf-page="693bf919ec57d63308aa3105" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DAFT - How It Works | Subscription Multimedia Design, Video Production, Motion Graphics, Graphic Design, Web Design & Branding</title>
+  <title>DAFT - How It Works | Subscription Multimedia Design, Video Production, Motion Graphics, Graphic Design, Web Design &amp Branding</title>
 <meta name="description" content="Discover how DAFT's flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs.">
 <meta name="keywords" content="DAFT subscription service, multimedia design, video production, motion graphics, graphic design, web design, branding, creative support, how it works">
 
@@ -24,7 +24,6 @@
   <link href="images/webclip.png" rel="apple-touch-icon">
   <link href="https://daft.media/how-it-works" rel="canonical">
   <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/9492799-MaisonNeueExt-Normal.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
 
