--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
  <link rel="preload" href="/fonts/9492799-MaisonNeueExt-Book.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="/fonts/9492803-MaisonNeueExt-Demi.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="preload" href="/fonts/9492805-MaisonNeueExt-Bold.woff2" as="font" type="font/woff2" crossorigin>
+   <link rel="preload" href="/fonts/9492807-MaisonNeueExt-XBold.woff2" as="font" type="font/woff2" crossorigin>
 
   <link rel="preload" href="/images/DAFT-website-logo-contact.svg" as="image" type="image/svg+xml">
 <link rel="preload" href="/images/DAFT-Logo.svg" as="image" type="image/svg+xml">
