--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ height: 100%;
                 <div class="uui-heading-subheading">Subscription Pricing</div>
                 <h2 class="uui-heading-medium">All the skill, none of the overhead.</h2>
                 <div class="uui-space-xsmall"></div>
-                <div class="uui-text-size-large">For individual projects or bespoke packages, get in <a href="mailto:sam@daft.media" class="link-3">touch. </a> </div>
+                <div class="uui-text-size-large">For websites, individual projects or bespoke packages, get in <a href="mailto:sam@daft.media" class="link-3">touch. </a> </div>
               </div>
             </div>
             <div class="w-layout-grid uui-pricing05_component">
