--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html data-wf-page="68c975cb862aeb40410727b4" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S20D64T3YS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S20D64T3YS');
+</script>
   <meta charset="utf-8">
   <title>DAFT – Web &amp Multimedia Design</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
