--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Wed Jan 07 2026 12:06:33 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="68c975cb862aeb40410727b4" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
