--- a/subscription.html
+++ b/subscription.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jan 09 2026 16:58:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="693bf919ec57d63308aa3105" data-wf-site="68c975cb862aeb40410727c7" lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S20D64T3YS"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-S20D64T3YS');
-</script>
   <meta charset="utf-8">
-  <title>DAFT - Subscription | Subscription Multimedia Design, Video Production, Motion Graphics, Graphic Design, Web Design &amp Branding</title>
-<meta name="description" content="Discover how DAFT's flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs.">
-<meta name="keywords" content="DAFT subscription service, multimedia design, video production, motion graphics, graphic design, web design, branding, creative support, how it works">
-
+  <title>Subscription</title>
+  <meta content="Discover how DAFT&#x27;s flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs." name="description">
   <meta content="Subscription" property="og:title">
   <meta content="Discover how DAFT&#x27;s flexible subscription service works. Get video production, motion graphics, graphic design, web design, and branding support tailored to your business needs." property="og:description">
   <meta content="Subscription" property="twitter:title">
@@ -252,15 +241,17 @@ body {
         </a>
       </div>
     </div>
-    <section id="hot-it-works-top" class="how-it-works-info">
-      <div>
-        <h1 class="the-gist">The Gist.</h1>
-      </div>
-      <div class="w-layout-blockcontainer contact-line black w-container"></div>
-      <div class="div-block-42">
-        <div class="site-text-block">You subscribe to a flexible creative partnership that fits the level of support you actually need. No long contracts. No hiring headaches. Just dependable creative output when it matters.<br><br>The cost is based on the volume and complexity of work you require each month. A few design requests here and there costs less than full scale brand, video, and web support. Simple as that. As your needs grow or slow down, your subscription can scale with you.<br><br>Once you are on board, you send requests as they come in. Graphic design, video, animation, web updates or rebrands. We slot them in and get to work. You get clear timelines and fast turnaround.<br><br>No chasing freelancers. No briefing multiple people. No explaining your brand over and over again.<br><br>Kick back and leave it with us. You focus on running the business. We handle the creative.</div>
-      </div>
-    </section>
+    <div class="how-it-works-div">
+      <section id="hot-it-works-top" class="how-it-works-info">
+        <div>
+          <h1 class="the-gist">The Gist.</h1>
+        </div>
+        <div class="w-layout-blockcontainer contact-line black w-container"></div>
+        <div class="div-block-42">
+          <div class="site-text-block">You subscribe to a flexible creative partnership that fits the level of support you actually need. No long contracts. No hiring headaches. Just dependable creative output when it matters.<br><br>The cost is based on the volume and complexity of work you require each month. A few design requests here and there costs less than full scale brand, video, and web support. Simple as that. As your needs grow or slow down, your subscription can scale with you.<br><br>Once you are on board, you send requests as they come in. Graphic design, video, animation, web updates or rebrands. We slot them in and get to work. You get clear timelines and fast turnaround.<br><br>No chasing freelancers. No briefing multiple people. No explaining your brand over and over again.<br><br>Kick back and leave it with us. You focus on running the business. We handle the creative.</div>
+        </div>
+      </section>
+    </div>
     <section class="section-5">
       <div class="container-9 w-container">
         <div class="content-block">
