--- a/contact.html
+++ b/contact.html
@@ -406,15 +406,15 @@ html, body {
         <input type="submit" class="form-button w-button" value="Submit the request">
       </form>
 
-      <!-- Success message -->
-      <div class="w-form-done" style="display:none;">
-        <div>Thank you! Your submission has been received!</div>
-      </div>
+      <div style="margin-top:20px;">
+  <div class="w-form-done" style="display:none;">
+    <div>Thank you! Your submission has been received!</div>
+  </div>
 
-      <!-- Failure message -->
-      <div class="w-form-fail" style="display:none;">
-        <div>Oops! Something went wrong while submitting the form.</div>
-      </div>
+  <div class="w-form-fail" style="display:none;">
+    <div>Oops! Something went wrong while submitting the form.</div>
+  </div>
+</div>
 
     </div>
   </div>
